--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
-    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
@@ -22,6 +21,7 @@
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
     "reactjs-popup": "^2.0.5",
+    "sass": "^1.53.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
