--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "reactjs-popup": "^2.0.5",
     "sass": "^1.53.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-tabs": "4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
