--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sass": "^1.53.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1",
-    "react-tabs": "4.2.1"
+    "react-tabs": "4.2.1",
+    "react-loader-spinner": "5.1.7-beta.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -61,5 +62,8 @@
   },
   "watch": {
     "build": "src/"
+  },
+  "overrides": {
+    "react-error-overlay": "6.0.9"
   }
 }
