--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1",
     "react-tabs": "4.2.1",
-    "react-loader-spinner": "5.1.7-beta.1"
+    "react-loader-spinner": "5.1.7-beta.1",
+    "rc-select": "14.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
