--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-hook-form": "^7.33.1",
     "react-modal": "^3.14.4",
     "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
