--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "sass": "^1.53.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1",
-    "react-tabs": "4.2.1",
     "react-loader-spinner": "5.1.7-beta.1",
-    "rc-select": "14.1.9"
+    "react-alert": "7.0.3",
+    "react-alert-template-basic": "1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
