--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "axios": "0.27.2",
     "gsap": "^3.10.4",
     "react": "^17.0.2",
+    "react-alert": "7.0.3",
+    "react-alert-template-basic": "1.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.33.1",
+    "react-loader-spinner": "5.1.7-beta.1",
     "react-modal": "^3.14.4",
     "react-router": "^5.2.1",
     "react-router-dom": "6.3.0",
@@ -27,10 +30,7 @@
     "reactjs-popup": "^2.0.5",
     "sass": "^1.53.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1",
-    "react-loader-spinner": "5.1.7-beta.1",
-    "react-alert": "7.0.3",
-    "react-alert-template-basic": "1.0.2"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,7 +57,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://193.124.206.25:5001/",
+  "proxy": "http://193.124.206.25:3001/",
   "devDependencies": {
     "npm-watch": "^0.11.0"
   },
