--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "aos": "^2.3.4",
     "axios": "0.27.2",
     "gsap": "^3.10.4",
+    "ping.js": "^0.3.0",
     "react": "^17.0.2",
     "react-alert": "7.0.3",
     "react-alert-template-basic": "1.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.33.1",
+    "react-hook-form": "7.33.1",
     "react-loader-spinner": "5.1.7-beta.1",
     "react-modal": "^3.14.4",
     "react-router": "^5.2.1",
@@ -30,8 +31,7 @@
     "reactjs-popup": "^2.0.5",
     "sass": "^1.53.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1",
-    "react-hook-form": "7.33.1"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
