--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/error-message": "2.0.0",
+    "@inovua/reactdatagrid-community": "^5.8.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@mui/styled-engine-sc": "^5.1.0",
