--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
+    "react-trello": "^2.2.11",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.53.0",
     "styled-components": "^5.3.3",
