--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/error-message": "2.0.0",
-    "@inovua/reactdatagrid-community": "^5.8.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@mui/styled-engine-sc": "^5.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ag-grid-community": "^29.0.0",
+    "ag-grid-react": "^29.0.0",
     "aos": "^2.3.4",
     "axios": "0.27.2",
     "gsap": "^3.10.4",
     "ping.js": "^0.3.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-alert": "7.0.3",
     "react-alert-template-basic": "1.0.2",
     "react-dom": "^17.0.2",
