--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-alert-template-basic": "1.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "7.33.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-loader-spinner": "5.1.7-beta.1",
     "react-modal": "^3.14.4",
     "react-router": "^5.2.1",
     "react-router-dom": "6.3.0",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.8.0",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
     "react-trello": "^2.2.11",
