--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "0.27.2",
     "gsap": "^3.10.4",
     "ping.js": "^0.3.0",
-    "react": "^18.2.0",
+    "ra-data-json-server": "^4.7.0",
+    "react": "^17.0.2",
+    "react-admin": "^4.7.0",
     "react-alert": "7.0.3",
     "react-alert-template-basic": "1.0.2",
     "react-dom": "^17.0.2",
