--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
     "react-trello": "^2.2.11",
+    "react-window": "^1.8.8",
+    "react-window-infinite-loader": "^1.0.8",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.53.0",
     "styled-components": "^5.3.3",
