--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "7.33.1",
     "react-image-gallery": "^1.2.11",
+    "react-image-picker-editor": "^1.3.2",
     "react-lazy-load-image-component": "^1.5.6",
     "react-loader-spinner": "5.1.7-beta.1",
     "react-modal": "^3.14.4",
