--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tinymce/tinymce-react": "^4.3.0",
     "ag-grid-community": "^29.0.0",
     "ag-grid-react": "^29.0.0",
     "aos": "^2.3.4",
