--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-window-infinite-loader": "^1.0.8",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.53.0",
+    "slate": "^0.94.1",
+    "slate-react": "^0.94.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
