fix auth, minor fix

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/error-message": "2.0.0",
+    "@lexical/react": "^0.10.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@mui/styled-engine-sc": "^5.1.0",
@@ -19,6 +21,7 @@
     "axios": "0.27.2",
     "classnames": "^2.3.2",
     "gsap": "^3.10.4",
+    "lexical": "^0.10.0",
     "lodash": "^4.17.21",
     "ping.js": "^0.3.0",
     "ra-data-json-server": "^4.7.0",
@@ -26,6 +29,7 @@
     "react-admin": "^4.7.0",
     "react-alert": "7.0.3",
     "react-alert-template-basic": "1.0.2",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
     "react-hook-form": "7.33.1",
     "react-image-gallery": "^1.2.11",
@@ -44,6 +48,9 @@
     "react-window-infinite-loader": "^1.0.8",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.53.0",
+    "slate": "^0.94.1",
+    "slate-history": "^0.93.0",
+    "slate-react": "^0.94.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
