--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "reactjs-popup": "^2.0.5",
     "sass": "^1.53.0",
     "slate": "^0.94.1",
+    "slate-history": "^0.93.0",
     "slate-react": "^0.94.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
