--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-script --max_old_space_size=1024 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch": "npm-watch",
