--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "GMGame",
+  "name": "Бесплатный строительно-выживательный сервер. Без приватов и донат магазина.",
   "icons": [
     {
       "src": "favicon.ico",
