--- a/package.json
+++ b/package.json
@@ -3,29 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
     "@hookform/error-message": "2.0.0",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.5",
-    "@mui/styled-engine-sc": "^5.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@tinymce/tinymce-react": "^4.3.0",
     "ag-grid-community": "^29.0.0",
     "ag-grid-react": "^29.0.0",
     "aos": "^2.3.4",
     "axios": "0.27.2",
     "classnames": "^2.3.2",
+    "context-filter-polyfill": "^0.3.13",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-advanced-cropper": "^0.19.6",
     "react-alert": "7.0.3",
     "react-alert-template-basic": "1.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "7.33.1",
     "react-image-gallery": "^1.2.11",
-    "react-image-picker-editor": "^1.3.2",
     "react-lazy-load-image-component": "^1.5.6",
     "react-loader-spinner": "5.1.7-beta.1",
     "react-modal": "^3.14.4",
