--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.2",
     "context-filter-polyfill": "^0.3.13",
     "lodash": "^4.17.21",
+    "prettier": "^3.2.5",
     "react": "^17.0.2",
     "react-advanced-cropper": "^0.19.6",
     "react-alert": "7.0.3",
