--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/error-message": "2.0.0",
+    "@storybook/test": "^8.0.5",
     "ag-grid-community": "^29.0.0",
     "ag-grid-react": "^29.0.0",
     "aos": "^2.3.4",
@@ -31,7 +32,7 @@
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
     "slate-react": "^0.94.2",
-    "storybook": "^7.0.26",
+    "storybook": "^8.0.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -64,17 +65,16 @@
   },
   "proxy": "http://127.0.0.1:3001/",
   "devDependencies": {
-    "@storybook/addon-docs": "^7.0.26",
-    "@storybook/addon-essentials": "^7.0.26",
-    "@storybook/addon-interactions": "^7.0.26",
-    "@storybook/addon-links": "^7.0.26",
-    "@storybook/blocks": "^7.0.26",
-    "@storybook/preset-create-react-app": "^7.0.26",
-    "@storybook/react": "^7.0.26",
-    "@storybook/react-webpack5": "^7.0.26",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/addon-docs": "^8.0.5",
+    "@storybook/addon-essentials": "^8.0.5",
+    "@storybook/addon-interactions": "^8.0.5",
+    "@storybook/addon-links": "^8.0.5",
+    "@storybook/blocks": "^8.0.5",
+    "@storybook/preset-create-react-app": "^8.0.5",
+    "@storybook/react": "^8.0.5",
+    "@storybook/react-webpack5": "^8.0.5",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-storybook": "^0.8.0",
     "npm-watch": "^0.11.0",
     "prop-types": "^15.8.1",
     "react-docgen-typescript-loader": "^3.7.2",
