--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "0.27.2",
     "classnames": "^2.3.2",
     "context-filter-polyfill": "^0.3.13",
+    "emoji-picker-react": "^4.9.2",
     "lodash": "^4.17.21",
     "prettier": "^3.2.5",
     "react": "^17.0.2",
