--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-loader-spinner": "5.1.7-beta.1",
     "react-modal": "^3.14.4",
+    "react-redux": "^8.1.2",
     "react-router": "^5.2.1",
     "react-router-dom": "6.3.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-window": "^1.8.8",
+    "redux": "^5.0.1",
     "sass": "^1.53.0",
     "slate": "^0.102.0",
     "slate-history": "^0.100.0",
