--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@hookform/error-message": "2.0.1",
+    "@uiw/react-color-sketch": "^2.3.2",
     "ag-grid-community": "^29.0.0",
     "ag-grid-react": "^29.0.0",
     "aos": "^2.3.4",
