--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@blaumaus/react-alert": "^7.0.7",
     "@hookform/error-message": "2.0.1",
     "@uiw/react-color-sketch": "^2.3.2",
     "ag-grid-community": "^29.0.0",
@@ -17,8 +18,6 @@
     "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-advanced-cropper": "^0.19.6",
-    "react-alert": "7.0.3",
-    "react-alert-template-basic": "1.0.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "7.33.1",
     "react-image-gallery": "^1.2.11",
