--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emoji-picker-react": "^4.9.2",
     "lodash": "^4.17.21",
     "prettier": "^3.2.5",
+    "ramda": "^0.30.1",
     "react": "^18.3.1",
     "react-advanced-cropper": "^0.19.6",
     "react-dom": "^18.3.1",
