--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.2",
     "context-filter-polyfill": "^0.3.13",
     "emoji-picker-react": "^4.9.2",
+    "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
